@@ -292,9 +292,11 @@ EOD;
 
 	/**
 	 * Deletes all values from cache.
-	 * Be careful of performing this operation if the cache is shared by multiple applications.
+	 * This is the implementation of the method declared in the parent class.
+	 * @return boolean whether the flush operation was successful.
+	 * @since 1.1.5
 	 */
-	public function flush()
+	protected function flushValues()
 	{
 		$this->getDbConnection()->createCommand("DELETE FROM {$this->cacheTableName}")->execute();
 		return true;
