@@ -91,17 +91,18 @@ class CEAcceleratorCache extends CCache
 
 	/**
 	 * Deletes all values from cache.
-	 * Be careful of performing this operation if the cache is shared by multiple applications.
+	 * This is the implementation of the method declared in the parent class.
+	 * @return boolean whether the flush operation was successful.
+	 * @since 1.1.5
 	 */
-	public function flush()
+	protected function flushValues()
 	{
 		// first, remove expired content from cache
 		eaccelerator_gc();
-
 		// now, remove leftover cache-keys
 		$keys = eaccelerator_list_keys();
 		foreach($keys as $key)
 			$this->deleteValue(substr($key['name'], 1));
+		return true;
 	}
 }
-
